src/design/dashboard.scss
@import "colors";

%widget {
  margin-bottom: 1rem;
}

%widget-h2 {
  font-weight: normal;
  margin: 0.3em 0;
}

%widget-header {
  margin-bottom: 0.3em;
}

%widget-placeholder {
  height: 45px;
  margin-top: 0.5rem;
  background-color: $color-not-white-bg;
  display: flex;
  align-items: center;
  justify-content: center;
  @extend %font-medium-m;
}

%dashboard-header-pellet {
  margin-left: 10px;
}

$diary-widget-min-width: 355px;
$announcements-widget-min-width: 500px;
$homework-widget-min-width: 255px;
$schedule-widget-min-width: 255px;
$statistics-widget-min-width: 355px;
$statistics-widget-max-width: 355px;
$activity-widget-min-width: 355px;

$announcement-item-min-height: 152px;
$activity-item-height: 80px;
$announcement-item-min-width: min(323px, 80vw);
$announcement-item-horizontal-min-width: min(450px, 80vw);
$news-thumbnail-size-in-modal: 90px;

%read-only-button {
  line-height: 1;
  height: 15px;
  width: 15px;
  padding: 0;
  background-color: white;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;

  .unread-filter-icon {
    font-size: 20px;
  }
}

%inline-modal-ck {
  border: 1px solid #666 !important;
  max-height: 30vh;
  overflow-y: auto;
}

%item-pellet {
  --pellet_size: 25px;
  height: var(--pellet_size);
  width: var(--pellet_size);
  border: 4px solid white;
  border-radius: 50%;
  position: absolute;
  top: 0;
  left: 100%;
  transform: translate(-65%, -40%);
}

%widget-footer {
  margin-top: 8px;
  display: flex;
  justify-content: flex-end;

  button {
    margin-right: 4px;
    height: 2rem;
    border: 1px solid $neutral-60;
    border-radius: 6px;
    background-color: $neutral-10;
    cursor: pointer;
    padding: 6px 1rem;
    display: flex;
    align-items: center;
    @extend %font-regular-m;
  }
}

// Activities common css
%activity-item {
  --icon-width: 60px;
  height: 100%;
  width: 100%;
  display: flex;
  padding-right: 2rem;
  overflow: hidden;

  &.phone {
    padding-right: 0;

    .date {
      padding-top: 0;
      height: 100%;
      display: flex;
      align-items: center;
    }
  }

  i {
    font-style: normal;
    color: #6190E0;
    cursor: pointer;

    &:hover {
      text-decoration: underline;
    }
  }

  .icon {
    min-width: 25px;
    width: var(--icon-width);
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .content {
    flex: 1;
    min-width: 150px;
    position: relative;
    font-size: 0.8rem;
    padding-top: 1rem;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    .author, .description {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }

    .author {
      font-size: 0.875rem;
      font-weight: bold;
      color: $color-new-light-text;
    }

    .description {
      position: absolute;
      top: 50%;
      width: 100%;
    }
  }

  .date {
    padding-top: 1rem;
    font-size: 0.8rem;
    color: $color-new-light-text;
  }
}

